force-app/main/default/objects/ApplicationProperty__mdt/ApplicationProperty__mdt.object-meta.xml
<CustomObject>
    <description>Stores various properties of application grouped per data provider.</description>
    <label>Application Property</label>
    <pluralLabel>Application Properties</pluralLabel>
</CustomObject>