force-app/main/default/objects/ApplicationProperty__mdt/fields/Appsolutely_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Appsolutely_Contact_Email__c</fullName>
    <label>Appsolutely Contact Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>