force-app/main/default/objects/ApplicationProperty__mdt/fields/Data_Provider_Account_Comment__c.field-meta.xml
<CustomField>
    <fullName>Data_Provider_Account_Comment__c</fullName>
    <label>Data Provider Account Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>