force-app/main/default/objects/ApplicationProperty__mdt/fields/Data_Provider_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Provider_Account_Id__c</fullName>
    <label>Data Provider Account Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>