force-app/main/default/objects/ApplicationProperty__mdt/fields/DataProviderAdminPassword__c.field-meta.xml
<CustomField>
    <fullName>DataProviderAdminPassword__c</fullName>
    <label>Data Provider Admin Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>