force-app/main/default/objects/ApplicationProperty__mdt/fields/DataProviderAdminUsername__c.field-meta.xml
<CustomField>
    <fullName>DataProviderAdminUsername__c</fullName>
    <label>Data Provider Admin Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>