force-app/main/default/objects/ApplicationProperty__mdt/fields/DataProviderName__c.field-meta.xml
<CustomField>
    <fullName>DataProviderName__c</fullName>
    <label>Data Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>