force-app/main/default/objects/ApplicationProperty__mdt/fields/DefaultTrialBalance__c.field-meta.xml
<CustomField>
    <fullName>DefaultTrialBalance__c</fullName>
    <label>Default Trial Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>